2005-07-26  Martin Hunt  <hunt@redhat.com>

	* buildrun.cxx (compile_pass): Add -Wno-unused to CFLAGS because
	usually a module doesn't use every function in the runtime.

2005-07-26  Martin Hunt  <hunt@redhat.com>
	
	* Makefile.am (stpd_LDFLAGS): Set rpath correclty because otherwise 
	automake doesn't seem to get it right when binaries are in libexec subdirs.
	(AM_CPPFLAGS): revert.
	* systemtap.spec.in (LDFLAGS): Set libexecdir here instead.	
	
2005-07-26  Frank Ch. Eigler  <fche@redhat.com>

	Support %{ embedded-c %}
	* staptree.h (embeddedcode): New statement subtype.  Stub support in
	visitors.
	* staptree.cxx: Ditto.
	* parse.cxx: Parse %{ / %}.  Accept "_" as identifier leading char.
	(parse_probe): Simplify calling convention.
	* elaborate.h: Store embedded code.
	* elaborate.cxx: Pass it.
	* translate.cxx: Transcribe it.  Return some dropped module init/exit
	code.
	* Makefile.am: Add buildok/buildko tests.
	* Makefile.in: Regenerated.
	* main.cxx: Return EXIT_SUCCESS/FAILURE even for weird rc.
	* testsuite/parseok/nine.stp: Test _identifiers.
	* testsuite/transko/*.stp: Tweak to force -p3 rather than -p2 errors.
	* testsuite/semok/transko.stp: ... and keep it that way in the future.
	* testsuite/parse*/*: Some new tests for %{ %}.
	* testsuite/build*/*: New tests for -p4.

2005-07-26  Martin Hunt  <hunt@redhat.com>

	* Makefile.am (AM_CPPFLAGS): Set PKGLIBDIR correctly.

2005-07-26  Martin Hunt  <hunt@redhat.com>	
	* systemtap.spec.in: Stpd goes in libexec/systemtap.
	* Makefile.am (libexecdir): Set to libexecdir/systemtap.
	* aclocal.m4, Makefile.in: Regenerated	

2005-07-25  Roland McGrath  <roland@redhat.com>

	* configure.ac: Don't define PKGLIBDIR and PKGDATADIR here.
	* Makefile.am (AM_CPPFLAGS): New variable, use -D here instead.
	(dist-hook): Don't remove ChangeLog files.
	(install-data-local): Don't install docs, just runtime stuff.
	(rpm, clean-local): Use make variables instead of @substitution@s.